# assnatouverte

./: .coveragerc  .gitignore  .pylintrc  CNAME  Pipfile  README.md  __main__.py  assnatouverte.py  index.html  mypy.ini  pyproject.toml
.circleci/: config.yml
.github/workflows/: ci.yml
assnatouverte/: __main__.py  cli.py
assnatouverte/crawling/: crawler.py  crawler_repo.py  crawler_service.py  crawler_service_factory.py  defaults.py
assnatouverte/crawling/crawlers/: all_members_crawler.py  current_members_crawler.py  legislatures_crawler.py
assnatouverte/crawling/downloader/: http_downloader.py
assnatouverte/crawling/utils/: date_parser.py  string_utils.py
assnatouverte/database/: base.py  database.py  database_service.py  database_service_factory.py
assnatouverte/database/model/: __init__.py  hansard.py  legislature.py  member.py
crawling/: crawler.py  crawler_repo.py  crawler_service.py  crawler_service_factory.py
crawling/crawlers/: current_members_crawler.py
crawling/downloader/: downloader.py  http_downloader.py
database/: base.py  database.py  database_service.py  database_service_factory.py  utils.py
database/model/: hansard.py  member.py
tests/: test_assnatouverte.py
tests/test_crawling/: test_crawler_repo.py  test_crawler_service.py  test_crawler_service_factory.py
tests/test_crawling/crawlers_test_package/: first_module.py  second_module.py
tests/test_crawling/test_crawlers/: mock_downloader.py  test_all_members_crawler.py  test_current_members_crawler.py  test_legislatures_crawler.py
tests/test_crawling/test_downloader/: test_http_downloader.py
tests/test_crawling/test_utils/: test_date_parser.py  test_string_utils.py
tests/test_database/: test_database.py  test_database_service.py  test_database_service_factory.py
website/.circleci/: config.yml
(+4 files in other folders)
