[tool.poetry]
name = "assnatouverte"
version = "0.1.0"
description = "Crawler and unofficial public API of the Assemblée Nationale du Québec"
authors = ["Émile Grégoire <eg@emilegregoire.ca>"]
homepage = "https://assnatouverte.ca"
repository = "https://github.com/emgre/assnatouverte"

[tool.poetry.scripts]
assnatouverte = 'assnatouverte.cli:main'

[tool.poetry.dependencies]
python = "^3.8" # CI will check every version starting from this

arghandler = "^1.2" # CLI tooling
parsel = "^1.6" # HTML parsing
requests = "^2.25" # HTTP requests
SQLAlchemy = "^1.4" # Database and ORM

[tool.poetry.group.dev.dependencies]
coverage = "^6.1" # Code coverage report
pylint = "^2.1" # Linting
mypy = "^0.910" # Static typing

# Types
types-requests = "^2.25"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
