[tool.poetry]
name = "assnatouverte"
version = "0.1.0"
description = "Crawler and unofficial public API of the Assemblée Nationale du Québec"
authors = ["Émile Grégoire <eg@emilegregoire.ca>"]
homepage = "https://assnatouverte.ca"
repository = "https://github.com/emgre/assnatouverte"

[tool.poetry.scripts]
assnatouverte = 'assnatouverte.cli:main'

[tool.poetry.dependencies]
python = "^3.8" # CI will check every version starting from this

arghandler = "^1.3" # CLI tooling
parsel = "^1.9" # HTML parsing
requests = "^2.31" # HTTP requests
SQLAlchemy = "^1.4" # Database and ORM

[tool.poetry.group.dev.dependencies]
coverage = "^7.4" # Code coverage report
pylint = "^3.1" # Linting
mypy = "^1.9" # Static typing

# Types
types-requests = "^2.31"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
